CH20: Added static hit points

--- a/views/play.erb
+++ b/views/play.erb
@@ -1,5 +1,5 @@
 <h3> Player A </h3>
-<h2> <%= @nameA %> </h2>
+<h2> <%= @nameA %>: <%= '60/60' %> </h2>
 
 <h3> Player B </h3>
-<h2> <%= @nameB %> </h2>
+<h2> <%= @nameB %>: <%= '60/60' %> </h2>
