--- a/views/play.erb
+++ b/views/play.erb
@@ -1,5 +1,12 @@
 <h3> Player A </h3>
 <h2> <%= @nameA %>: <%= '60/60' %> </h2>
 
+<form action="/attack" method=post>
+  <input type="submit" value="Attack" name="attack_confirmation">
+  <% if @attack_confirmation %>
+  <h1> Someone attacks! </h1>
+  <% end %>
+</form>
+
 <h3> Player B </h3>
 <h2> <%= @nameB %>: <%= '60/60' %> </h2>
