CH24: Refactored Player class

--- a/views/play.erb
+++ b/views/play.erb
@@ -1,5 +1,5 @@
 <h3> Player A </h3>
-<h2> <%= @nameA %>: <%= @hpA %> </h2>
+<h2> <%= @nameA %>: <%= @hpA %> HP </h2>
 
 <form action="/attack" method=post>
   <input type="submit" value="Attack" name="attack_confirmation">
@@ -9,4 +9,4 @@
 </form>
 
 <h3> Player B </h3>
-<h2> <%= @nameB %>: <%= @hpB %> </h2>
+<h2> <%= @nameB %>: <%= @hpB %> HP </h2>
